@@ -46,6 +46,12 @@ EdcaParameterSet::SetQosSupported (uint8_t qosSupported)
   m_qosSupported = qosSupported;
 }
 
+uint8_t
+EdcaParameterSet::IsQosSupported (void) const
+{
+  return ((m_acBE != 0) || (m_acBK != 0) || (m_acVI != 0) || (m_acVO!= 0));
+}
+
 void
 EdcaParameterSet::SetQosInfo (uint8_t qosInfo)
 {
