@@ -591,11 +591,14 @@ ATTRIBUTE_HELPER_CPP (HtCapabilities);
 std::ostream &
 operator << (std::ostream &os, const HtCapabilities &htcapabilities)
 {
-  os <<  bool (htcapabilities.GetLdpc ())
+  os << bool (htcapabilities.GetLdpc ())
      << "|" << bool (htcapabilities.GetSupportedChannelWidth ())
      << "|" << bool (htcapabilities.GetGreenfield ())
-     << "|" << bool (htcapabilities.GetShortGuardInterval20 ());
-
+     << "|" << bool (htcapabilities.GetShortGuardInterval20 ()) << "|";
+  for (uint32_t k = 0; k < MAX_SUPPORTED_MCS; k++)
+    {
+      os << htcapabilities.IsSupportedMcs (k) << " ";
+    }
   return os;
 }
 
